# fem

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  __init__.py  __version__.py  build_sphinx.sh  dyna  environment.yml  foo  install.sh  logging.yml  mlp6-fem-issues.csv  mlp6-fem-issues.md  pytest.ini  requirements.txt  rtfd_requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
VF105_Bandwidth/: FieldImpulseResponseVF105.mat  FieldImpulseResponseVF105_200e6.mat  VF105ImpulseResponse.m  VF105plots.m  vf105.mat  vf105.spec
arfi/: CleanHeaders.pl  SaveEnergies.cfile  SaveNode223366.cfile  arfi7_centernodes.mat  center_locations.txt  center_node_list.mat  centerplane.mat  cirs.dyn  cirs_topbc_const.dyn  cirs_topbc_free.dyn  save_node_disp.cfile  timehist.cfile
arfi7/: centerplane.mat
docs/: CreateStructure.rst  GaussExc.rst  GenMesh.rst  Makefile  TopLoad.rst  bc.rst  code_layout.html  code_layout.rst  conf.py  coordinates_units.html  coordinates_units.rst  create_disp_dat.rst  create_disp_vtk.rst  create_dyna_mesh.html  create_dyna_mesh.md  create_pointloads_vtk.rst  create_res_sim_mat.rst  examples.html  (+38 more)
fem/post/: .gitignore  CMakeLists.txt  create_disp_dat.py  create_disp_dat_fast.c  create_disp_dat_fast.i  create_disp_dat_fast.i.typemap  create_res_sim.py  green2para.py  h52vtr.py  ressim.py  savevtk.py  scale_disp_dat.cpp
fem/post/create_disp_dat_c/: .gitignore  CMakeLists.txt  Makefile
(+933 files in other folders)
